--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
       </div>
       <div class="imgContainer">
         <div class="absolute icons iconDots">
-          <img src="./images/userAsset/dots.png" alt="" />
+          <img src="./Images/userAsset/dots.png" alt="" />
         </div>
         <div class="absolute icons icon-cube">
-          <img src="./images/userAsset/cube.png" alt="" />
+          <img src="./Images/userAsset/cube.png" alt="" />
         </div>
         <div class="absolute icons icon-circle">
-          <img src="./images/userAsset/circle.png" alt="" />
+          <img src="./Images/userAsset/circle.png" alt="" />
         </div>
         <div class="absolute icons iconZigZag">
-          <img src="./images/userAsset/zigzags.png" alt="" />
+          <img src="./Images/userAsset/zigzags.png" alt="" />
         </div>
         <div class="absolute icons icon-plus">
-          <img src="./images/userAsset/plus.png" alt="" />
+          <img src="./Images/userAsset/plus.png" alt="" />
         </div>
         <div class="">
           <div class="userImage">
@@ -85,13 +85,13 @@
           <div class="projectNumber rightNumber">01</div>
           <div class="projectContent leftProjectContent">
             <div class="projectSkillsContainer">
-              <img class="projectSkill" src="./images/stack/HTML.png" alt="" />
-              <img class="projectSkill" src="./images/stack/CSS.png" alt="" />
-              <img class="projectSkill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="projectSkill" src="./images/stack/React.png" alt="" />
-              <img class="projectSkill" src="./images/stack/NodeJs.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/HTML.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/CSS.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/Javascript.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/React.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/NodeJs.svg" alt="" />
 
-              <img class="projectSkill" src="./images/stack/Vercel.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/Vercel.svg" alt="" />
             </div>
             <h2 class="projectHeading">MoviesVilla</h2>
             <p class="projectSubHeading">
@@ -111,10 +111,10 @@
           <div class="projectNumber rightNumber">02</div>
           <div class="projectContent leftProjectContent">
             <div class="projectSkillsContainer">
-              <img class="projectSkill" src="./images/stack/HTML.png" alt="" />
-              <img class="projectSkill" src="./images/stack/CSS.png" alt="" />
-              <img class="projectSkill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="projectSkill" src="./images/stack/NodeJs.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/HTML.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/CSS.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/Javascript.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/NodeJs.svg" alt="" />
               <img class="projectSkill" src="./Images/stack/Github.svg" alt="" />
             </div>
             <h2 class="projectHeading">Art Gallery</h2>
@@ -133,10 +133,10 @@
           <div class="projectNumber leftNumber">03</div>
           <div class="projectContent rightProjectContent">
             <div class="projectSkillsContainer">
-              <img class="projectSkill" src="./images/stack/HTML.png" alt="" />
-              <img class="projectSkill" src="./images/stack/CSS.png" alt="" />
-              <img class="projectSkill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="projectSkill" src="./images/stack/React.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/HTML.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/CSS.png" alt="" />
+              <img class="projectSkill" src="./Images/stack/Javascript.svg" alt="" />
+              <img class="projectSkill" src="./Images/stack/React.png" alt="" />
               <img class="projectSkill" src="./Images/stack/Github.svg" alt="" />
             </div>
             <h2 class="projectHeading">Authentication App</h2>
@@ -174,28 +174,28 @@
       </div>
 
       <div class="rightSkillContainer">
-        <img src="./images/userAsset/blob vector.png" class="blobStyle" alt="" />
+        <img src="./Images/userAsset/blob vector.png" class="blobStyle" alt="" />
 
-        <img src="./images/stack/HTML.png" alt="" class="skillsLogo" />
-        <img src="./images/stack/CSS.png" alt="" class="skillsLogo" />
-        <img src="./images/stack/Javascript.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/React.png" alt="" class="skillsLogo" />
-        <img src="./images/stack/NodeJs.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Next.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Redux.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Tailwind.png" alt="" class="skillsLogo" />
-        <img src="./images/stack/Bootstrap.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/MaterialUI.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Express.png" alt="" class="skillsLogo" />
-        <img src="./images/stack/Git.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Github.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Graphql.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/MongoDB.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Vercel.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/ChartJs.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Bash.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/Docker.svg" alt="" class="skillsLogo" />
-        <img src="./images/stack/K8s.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/HTML.png" alt="" class="skillsLogo" />
+        <img src="./Images/stack/CSS.png" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Javascript.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/React.png" alt="" class="skillsLogo" />
+        <img src="./Images/stack/NodeJs.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Next.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Redux.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Tailwind.png" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Bootstrap.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/MaterialUI.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Express.png" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Git.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Github.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Graphql.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/MongoDB.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Vercel.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/ChartJs.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Bash.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/Docker.svg" alt="" class="skillsLogo" />
+        <img src="./Images/stack/K8s.svg" alt="" class="skillsLogo" />
       </div>
     </section>
     <!-- Skill Section End  -->
@@ -257,57 +257,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-  <!-- <script>
-      document.addEventListener("DOMContentLoaded", function (event) {
-        // array with texts to type in typewriter
-        var dataText = [
-          "Full Stack Developer",
-          "Web Developer",
-          "UI-UX Designer",
-          "Backend Developer",
-          "Coder",
-        ];
 
-        // type one text in the typwriter
-        // keeps calling itself until the text is finished
-        function typeWriter(text, i, fnCallback) {
-          // chekc if text isn't finished yet
-          if (i < text.length) {
-            // add next character to h1
-            document.querySelector(".role").innerHTML =
-              text.substring(0, i + 1) + '<span aria-hidden="true"></span>';
-
-            // wait for a while and call this function again for next character
-            setTimeout(function () {
-              typeWriter(text, i + 1, fnCallback);
-            }, 100);
-          }
-          // text finished, call callback if there is a callback function
-          else if (typeof fnCallback == "function") {
-            // call callback after timeout
-            setTimeout(fnCallback, 700);
-          }
-        }
-        // start a typewriter animation for a text in the dataText array
-        function StartTextAnimation(i) {
-          if (typeof dataText[i] == "undefined") {
-            setTimeout(function () {
-              StartTextAnimation(0);
-            }, 20000);
-          }
-          // check if dataText[i] exists
-          if (i < dataText[i].length) {
-            // text exists! start typewriter animation
-            typeWriter(dataText[i], 0, function () {
-              // after callback (and whole text has been animated), start next text
-              StartTextAnimation(i + 1);
-            });
-          }
-        }
-        // start the text animation
-        StartTextAnimation(0);
-      });
-    </script> -->
   <script>
     var typeData = new Typed(".role", {
       strings: [
